# dynamik-demo

./: .gitignore  README.md  compose.yaml
dynamik-frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
dynamik-frontend/app/: entry.server.tsx  root.tsx  tailwind.css  types.d.ts
dynamik-frontend/app/components/: Loader.tsx
dynamik-frontend/app/root/: HydrateFallback.tsx  Layout.tsx  clientLoader.ts
dynamik-frontend/app/root/components/: Help.tsx  QuestionAnswer.tsx  ThemeSelector.tsx  index.ts
dynamik-frontend/app/routes/_index/: action.ts  route.tsx
dynamik-frontend/app/routes/_index/components/: File.tsx  FileIcon.tsx  FileInput.tsx  FilePreview.tsx  index.ts
dynamik-frontend/app/routes/live/: loader.tsx
dynamik-frontend/app/routes/results.$id/: loader.ts  route.tsx
dynamik-frontend/app/routes/results.$id.download/: loader.ts
dynamik-frontend/app/routes/results.$id/components/: Drift.tsx  Summary.tsx  index.ts
dynamik-frontend/app/routes/results.$id_.$drift/: loader.ts  route.tsx
dynamik-frontend/app/routes/results.$id_.$drift.download/: loader.ts  route.ts
dynamik-frontend/app/routes/results.$id_.$drift/components/: ActivityProfilePlots.tsx  CalendarPlot.tsx  PoliciesPlot.tsx  (+4 more)
dynamik-frontend/app/routes/setup-experiment/: action.ts  route.tsx
dynamik-frontend/app/utils/: filemanager.server.ts  files.ts  queue.server.ts  random.ts  sleep.ts
dynamik-worker/: Dockerfile  pyproject.toml
dynamik-worker/runner/: __main__.py  file_manager.py  json_encoder.py  model.py
(+6 files in other folders)
