[tool.poetry]
name = "dynamik-worker"
version = "0.1.0"
description = "A worker for running dynamik"
license = "Apache-2.0"
authors = ["Victor Gallego <me@vjgallego.me>"]
readme = "README.md"
repository = "https://github.com/anonymized"
package-mode = false
packages = [{ include = "runner" }]

[tool.poetry.scripts]
expert = "runner:run"

[tool.poetry.dependencies]
python = "~3.11"
pika = "^1.3.2"
dynamik = { git = "https://github.com/AutomatedProcessImprovement/dynamik.git" }
pytimeparse = "^1.1.8"
humanreadable = "^0.4.0"
anytree = "^2.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
